--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="css/style.css" >
   <title>Slider</title>
 </head>
@@ -82,8 +83,9 @@
     </main>
   </div>
 
-  <script src="js/swiper-bundle.min.js"></script>
+  <!-- <script src="js/swiper-bundle.min.js"></script> -->
   <script src="js/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </body>
 
 </html>
